Header section complete for Desktop view

--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
 <head>
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
+<!-- Header Section-->
+<header>
+    <div class="logo">
+        <img src="./resources/images/ic-logo.svg" alt="Lion Icon">  
+        <span class="darktext">COLMAR</span>
+        <span class="lighttext">ACADEMY</span>
+    </div>
+    <nav class="desktop">
+        <ul>
+            <li><a href="#" class="btn">On Campus</a></li>
+            <li><a href="#" class="btn">Online</a></li>
+            <li><a href="#" class="btn">For Companies</a></li>
+            <li><a href="#" class="btn">Sign In</a></li>
+        </ul>
+    </nav>
+    <!-- <nav class="mobile">
+    <ul>
+        <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
+        <li><a href="#"><img src="./resources/images/ic-product-detail.svg"></a></li>
+        <li><a href="#"><img src="./resources/images/ic-about-us.svg"></a></li>
+        <li><a href="#" class="button">Join us</a></li>
+    </ul>
+    </nav> -->
+</header>
+    
 
 
 </body>
 
+
+
 </html>
+
+<!--Notes
+Start using alt text for your images
+These product-name divs may not be even necessary. If you move the paragraph text into the product into the product div, you get the same effect with less HTML being written overall. Maybe something to consider here for efficiency reasons.
+You are repeating these two styles a few times, maybe just create one class that applies both of these styles to be used repetitively. This might be a better approach. This reduces the amount of CSS you are writing overall.
+-->
