Header section complete for tablet and mobile views

--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
             <li><a href="#" class="btn">For Companies</a></li>
             <li><a href="#" class="btn">Sign In</a></li>
         </ul>
+    </nav>  
+    <nav class="mobile">
+        <ul>
+            <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
+            <li><a href="#"><img src="./resources/images/ic-on-campus.svg"></a></li>
+            <li><a href="#"><img src="./resources/images/ic-online.svg"></a></li>
+            <li><a href="#"><img src="./resources/images/ic-login.svg"></a></li>
+        </ul>
     </nav>
-    <!-- <nav class="mobile">
-    <ul>
-        <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
-        <li><a href="#"><img src="./resources/images/ic-product-detail.svg"></a></li>
-        <li><a href="#"><img src="./resources/images/ic-about-us.svg"></a></li>
-        <li><a href="#" class="button">Join us</a></li>
-    </ul>
-    </nav> -->
 </header>
     
 
 
 </body>
-
+    
 
 
 </html>
