Banner section complete for tablet and mobile views

--- a/index.html
+++ b/index.html
@@ -3,37 +3,46 @@
 <head>
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
-<!-- Header Section-->
-<header>
-    <div class="logo">
-        <img src="./resources/images/ic-logo.svg" alt="Lion Icon">  
-        <span class="darktext">COLMAR</span>
-        <span class="lighttext">ACADEMY</span>
+    <!-- Header Section-->
+    <header>
+        <div class="logo">
+            <img src="./resources/images/ic-logo.svg" alt="Lion Icon" />  
+            <span class="darktext">COLMAR</span>
+            <span class="lighttext">ACADEMY</span>
+        </div>
+        <nav class="desktop">
+            <ul>
+                <li><a href="#">On Campus</a></li>
+                <li><a href="#">Online</a></li>
+                <li><a href="#">For Companies</a></li>
+                <li><a href="#">Sign In</a></li>
+            </ul>
+        </nav>  
+        <nav class="mobile">
+            <ul>
+                <li><a href="#"><img src="./resources/images/ic-logo.svg" alt="Lion Icon" /></a></li>
+                <li><a href="#"><img src="./resources/images/ic-on-campus.svg" alt="Campus Icon" /></a></li>
+                <li><a href="#"><img src="./resources/images/ic-online.svg" alt="Online Icon" /></a></li>
+                <li><a href="#"><img src="./resources/images/ic-login.svg" alt="Sign In Icon" /></a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Banner Section -->
+    <div class="banner">
+        <div class="study">
+            <img src="./resources/images/banner.jpg" alt="Three Students Studying" /> 
+        </div>
+        <div class="start">
+            <div class="intro">
+                <h1>Learn something<BR>new everyday</h1>
+                <h2>Lorem ipsum dolor sit amet,<BR>consectetur adipiscing elit.</h2>
+            </div>
+            <div class="btn">Start Here</div>
+        </div>
     </div>
-    <nav class="desktop">
-        <ul>
-            <li><a href="#" class="btn">On Campus</a></li>
-            <li><a href="#" class="btn">Online</a></li>
-            <li><a href="#" class="btn">For Companies</a></li>
-            <li><a href="#" class="btn">Sign In</a></li>
-        </ul>
-    </nav>  
-    <nav class="mobile">
-        <ul>
-            <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
-            <li><a href="#"><img src="./resources/images/ic-on-campus.svg"></a></li>
-            <li><a href="#"><img src="./resources/images/ic-online.svg"></a></li>
-            <li><a href="#"><img src="./resources/images/ic-login.svg"></a></li>
-        </ul>
-    </nav>
-</header>
-    
-
-
 </body>
     
 
