Banner and Information sections complete for Desktop and Mobile views

--- a/index.html
+++ b/index.html
@@ -6,51 +6,110 @@
 </head>
 
 <body>
+
     <!-- Header Section-->
+
     <header>
-        <div class="logo">
-            <img src="./resources/images/ic-logo.svg" alt="Lion Icon" />  
-            <span class="darktext">COLMAR</span>
-            <span class="lighttext">ACADEMY</span>
-        </div>
-        <nav class="desktop">
-            <ul>
-                <li><a href="#">On Campus</a></li>
-                <li><a href="#">Online</a></li>
-                <li><a href="#">For Companies</a></li>
-                <li><a href="#">Sign In</a></li>
-            </ul>
-        </nav>  
-        <nav class="mobile">
-            <ul>
-                <li><a href="#"><img src="./resources/images/ic-logo.svg" alt="Lion Icon" /></a></li>
-                <li><a href="#"><img src="./resources/images/ic-on-campus.svg" alt="Campus Icon" /></a></li>
-                <li><a href="#"><img src="./resources/images/ic-online.svg" alt="Online Icon" /></a></li>
-                <li><a href="#"><img src="./resources/images/ic-login.svg" alt="Sign In Icon" /></a></li>
-            </ul>
-        </nav>
-    </header>
-    <!-- Banner Section -->
-    <div class="banner">
-        <div class="study">
-            <img src="./resources/images/banner.jpg" alt="Three Students Studying" /> 
-        </div>
-        <div class="start">
-            <div class="intro">
-                <h1>Learn something<BR>new everyday</h1>
-                <h2>Lorem ipsum dolor sit amet,<BR>consectetur adipiscing elit.</h2>
+        <div class="site-container">
+            <div class="logo">
+                <img src="./resources/images/ic-logo.svg" alt="Lion Icon" />  
+                <span class="darkacademy-info">COLMAR</span>
+                <span class="lightacademy-info">ACADEMY</span>
             </div>
-            <div class="btn">Start Here</div>
+            <nav class="desktop">
+                <ul>
+                    <li><a href="#">On Campus</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">For Companies</a></li>
+                    <li><a href="#">Sign In</a></li>
+                </ul>
+            </nav>  
+            <nav class="mobile">
+                <ul>
+                    <li><a href="#"><img src="./resources/images/ic-logo.svg" alt="Lion Icon" /></a></li>
+                    <li><a href="#"><img src="./resources/images/ic-on-campus.svg" alt="Campus Icon" /></a></li>
+                    <li><a href="#"><img src="./resources/images/ic-online.svg" alt="Online Icon" /></a></li>
+                    <li><a href="#"><img src="./resources/images/ic-login.svg" alt="Sign In Icon" /></a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
+    </header>
+
+    <!-- Banner Section -->
+
+
+    <div class="banner grey">
+        <div class="site-container">
+            <div class="study">
+                <img src="./resources/images/banner.jpg" alt="Three Students Studying" /> 
+            </div>
+            <div class="start-here">
+                <div class="intro">
+                    <h1>Learn something<BR>new everyday</h1>
+                    <h2>Lorem ipsum dolor sit amet,<BR>consectetur adipiscing elit.</h2>
+                </div>
+                <div class="btn">Start Here</div>
+            </div>
+        </div>
+    </div>  
+
+    <!-- Information Section -->
+
+    <div class="Information light-grey">
+        <div class="site-container">
+            <div class="study">
+                <img src="./resources/images/information-main.jpg" alt="Student Reading a Book" /> 
+                <h1>It doesn't hurt to keep practising</h1>
+                <h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."<h4>
+                <p>Emmanual, Sr Stratagist at Hiring.co</p>
+            </div>
+            <div class="academy">
+                <div class="academy-img">
+                    <img src="./resources/images/information-orientation.jpg" alt="People walking and casting a long shadow" /> 
+                </div>  
+                <div class="academy-img-mobile">
+                        <img src="./resources/images/information-orientation-mobile.jpg" alt="People walking and casting a long shadow" /> 
+                </div>  
+                <div class="academy-info border">  
+                    <h3>Orientation Date</h3>
+                    <h4>Tue 10/11 and Wed 10/12: 8am - 3pm</h4>
+                    <a href="#">Read More</a>
+                </div>  
+                <div class="academy-img">
+                        <img src="./resources/images/information-campus.jpg" alt="Students seated in a lecture hall" /> 
+                </div>  
+                <div class="academy-img-mobile">
+                        <img src="./resources/images/information-campus-mobile.jpg" alt="People walking and casting a long shadow" /> 
+                </div> 
+                <div class="academy-info">
+                    <h3>Our Campus</h3>
+                    <h4>Find which campus is close by you</h4>
+                    <a href="#">Read More</a>
+                </div>  
+                <div class="academy-img grey">
+                        <img src="./resources/images/information-guest-lecture.jpg" alt="Photo of Guest Speaker Oliver Sack" /> 
+                </div>  
+                <div class="academy-img-mobile">
+                        <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="People walking and casting a long shadow" /> 
+                </div> 
+                <div class="academy-info grey">
+                    <h3>Our Guest Lecture</h3>
+                    <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+    </div>  
 </body>
     
 
 
 </html>
 
+
+
 <!--Notes
-Start using alt text for your images
-These product-name divs may not be even necessary. If you move the paragraph text into the product into the product div, you get the same effect with less HTML being written overall. Maybe something to consider here for efficiency reasons.
+Start using alt academy-info for your images
+These product-name divs may not be even necessary. If you move the paragraph academy-info into the product into the product div, you get the same effect with less HTML being written overall. Maybe something to consider here for efficiency reasons.
 You are repeating these two styles a few times, maybe just create one class that applies both of these styles to be used repetitively. This might be a better approach. This reduces the amount of CSS you are writing overall.
 -->
