--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -13,8 +14,8 @@
         <div class="site-container">
             <div class="logo">
                 <img src="./resources/images/ic-logo.svg" alt="Lion Icon" />  
-                <span class="darkacademy-info">COLMAR</span>
-                <span class="lightacademy-info">ACADEMY</span>
+                <span class="darktext">COLMAR</span>
+                <span class="lighttext">ACADEMY</span>
             </div>
             <nav class="desktop">
                 <ul>
@@ -37,8 +38,7 @@
 
     <!-- Banner Section -->
 
-
-    <div class="banner grey">
+    <div class="banner">
         <div class="site-container">
             <div class="study">
                 <img src="./resources/images/banner.jpg" alt="Three Students Studying" /> 
@@ -55,7 +55,7 @@
 
     <!-- Information Section -->
 
-    <div class="Information light-grey">
+    <div class="Information">
         <div class="site-container">
             <div class="study">
                 <img src="./resources/images/information-main.jpg" alt="Student Reading a Book" /> 
@@ -86,13 +86,13 @@
                     <h4>Find which campus is close by you</h4>
                     <a href="#">Read More</a>
                 </div>  
-                <div class="academy-img grey">
+                <div class="academy-img greybg">
                         <img src="./resources/images/information-guest-lecture.jpg" alt="Photo of Guest Speaker Oliver Sack" /> 
                 </div>  
                 <div class="academy-img-mobile">
                         <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="People walking and casting a long shadow" /> 
                 </div> 
-                <div class="academy-info grey">
+                <div class="academy-info">
                     <h3>Our Guest Lecture</h3>
                     <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
                     <a href="#">Read More</a>
@@ -100,11 +100,60 @@
             </div>
         </div>
     </div>  
+
+    <!-- Courses Section -->
+
+    <div class="Courses">
+        <h1>Start Learning</h1>
+        <div class="site-container">
+            <div class="course-container">
+                <div class="course">
+                    <img src="./resources/images/course-software.jpg" alt="Two computer screens" />
+                    <h3>Software Engineering</h3>
+                    <h4>COURSES</h4>
+                    <h4>Web Development, Mobile Development, iOT, APIs</h4>
+                </div> 
+                <div class="course">
+                        <img src="./resources/images/course-computer-art.jpg" alt="Left hand holding mobile phone" />
+                        <h3>Computer Art</h3>
+                        <h4>COURSES</h4>
+                        <h4>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation </h4>
+                </div> 
+                <div class="course">
+                        <img src="./resources/images/course-design.jpg" alt="Person with check shirt adjusting camera focus" />
+                        <h3>Design</h3>
+                        <h4>COURSES</h4>
+                        <h4>User Experience Design, User Research, Visual Design</h4>
+                </div> 
+                <div class="course">
+                        <img src="./resources/images/course-data.jpg" alt="Laptop displaying charts" />
+                        <h3>Data</h3>
+                        <h4>COURSES</h4>
+                        <h4>Data Sceince, Big Data, SQL, Data Visualisation</h4>
+                </div> 
+                <div class="course">
+                        <img src="./resources/images/course-business.jpg" alt="Metallic chess pieces" />
+                        <h3>Business</h3>
+                        <h4>COURSES</h4>
+                        <h4>Produce Development, Business Development, Startup</h4>
+                </div> 
+                <div class="course">
+                        <img src="./resources/images/course-marketing.jpg" alt="Person operating smart watch" />
+                        <h3>Marketting</h3>
+                        <h4>COURSES</h4>
+                        <h4>Analytics, Content Marketing, Mobile Marketing</h4>
+                </div> 
+            </div>  
+        </div>
+    </div>
+
 </body>
     
 
 
 </html>
+
+
 
 
 
