--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="academy-img-mobile">
                         <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="People walking and casting a long shadow" /> 
                 </div> 
-                <div class="academy-info">
+                <div class="academy-info greybg">
                     <h3>Our Guest Lecture</h3>
                     <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
                     <a href="#">Read More</a>
@@ -104,7 +104,7 @@
     <!-- Courses Section -->
 
     <div class="Courses">
-        <h1>Start Learning</h1>
+        <h1>Start learning</h1>
         <div class="site-container">
             <div class="course-container">
                 <div class="course">
@@ -147,9 +147,53 @@
         </div>
     </div>
 
-</body>
-    
+    <!-- Thesis Section -->
 
+    <div class="Thesis">
+        <h1>Thesis exhibits</h1>
+        <div class="site-container">
+            <div class="urban-video">
+                <video src="./resources/videos/thesis.mp4" autoplay controls>
+                    Video showing an office blockand skyline over 24 hours, condensed into just under 90 seconds. 
+                </video>
+                <h3>Reimagine Urban</h3>
+                <h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."<h4>
+            </div>
+            <div class="academy">
+                <div class="academy-img greybg">
+                        <img src="./resources/images/thesis-fisma.jpg" alt="Someone working on a new product prototype" /> 
+                </div>  
+                <div class="academy-info greybg">
+                    <h3>Fisma: Design and Prototype</h3>
+                    <h4>Designer showcase of new <BR> prototype product</h4>
+                </div> 
+                <div class="academy-img">
+                        <img src="./resources/images/thesis-now-and-then.jpg" alt="New York City skyline photo with office blocks" /> 
+                </div>  
+                <div class="academy-info">
+                    <h3>Now and then</h3>
+                    <h4>Research study about New York</h4>
+                </div>  
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+
+    <footer>
+        <div class="site-container">
+            <div class="copyright">
+                &copy;2016 Colmar Academy. All rights reserved
+            </div>
+            <div class="terms">
+                <ul>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+</body>
 
 </html>
 
