Project complete. Tablet views and final styling changes added.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="site-container">
             <div class="logo">
                 <img src="./resources/images/ic-logo.svg" alt="Lion Icon" />  
-                <span class="darktext">COLMAR</span>
-                <span class="lighttext">ACADEMY</span>
+                <span class="bluetext">COLMAR</span>
+                <span class="redtext">ACADEMY</span>
             </div>
             <nav class="desktop">
                 <ul>
@@ -48,7 +48,7 @@
                     <h1>Learn something<BR>new everyday</h1>
                     <h2>Lorem ipsum dolor sit amet,<BR>consectetur adipiscing elit.</h2>
                 </div>
-                <div class="btn">Start Here</div>
+                <div class="btn bluebg whitetext">Start Here</div>
             </div>
         </div>
     </div>  
@@ -61,38 +61,38 @@
                 <img src="./resources/images/information-main.jpg" alt="Student Reading a Book" /> 
                 <h1>It doesn't hurt to keep practising</h1>
                 <h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."<h4>
-                <p>Emmanual, Sr Stratagist at Hiring.co</p>
+                <span>Emmanual, Sr Stratagist at Hiring.co</span>
             </div>
-            <div class="academy">
-                <div class="academy-img">
+            <div class="info-section">
+                <div class="image border">
                     <img src="./resources/images/information-orientation.jpg" alt="People walking and casting a long shadow" /> 
                 </div>  
-                <div class="academy-img-mobile">
+                <div class="image-mobile">
                         <img src="./resources/images/information-orientation-mobile.jpg" alt="People walking and casting a long shadow" /> 
                 </div>  
-                <div class="academy-info border">  
+                <div class="info border">  
                     <h3>Orientation Date</h3>
                     <h4>Tue 10/11 and Wed 10/12: 8am - 3pm</h4>
                     <a href="#">Read More</a>
                 </div>  
-                <div class="academy-img">
+                <div class="image">
                         <img src="./resources/images/information-campus.jpg" alt="Students seated in a lecture hall" /> 
                 </div>  
-                <div class="academy-img-mobile">
+                <div class="image-mobile">
                         <img src="./resources/images/information-campus-mobile.jpg" alt="People walking and casting a long shadow" /> 
                 </div> 
-                <div class="academy-info">
+                <div class="info">
                     <h3>Our Campus</h3>
                     <h4>Find which campus is close by you</h4>
                     <a href="#">Read More</a>
                 </div>  
-                <div class="academy-img greybg">
+                <div class="image bluebg">
                         <img src="./resources/images/information-guest-lecture.jpg" alt="Photo of Guest Speaker Oliver Sack" /> 
                 </div>  
-                <div class="academy-img-mobile">
+                <div class="image-mobile">
                         <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="People walking and casting a long shadow" /> 
                 </div> 
-                <div class="academy-info greybg">
+                <div class="info bluebg whitetext">
                     <h3>Our Guest Lecture</h3>
                     <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
                     <a href="#">Read More</a>
@@ -114,34 +114,34 @@
                     <h4>Web Development, Mobile Development, iOT, APIs</h4>
                 </div> 
                 <div class="course">
-                        <img src="./resources/images/course-computer-art.jpg" alt="Left hand holding mobile phone" />
-                        <h3>Computer Art</h3>
-                        <h4>COURSES</h4>
-                        <h4>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation </h4>
+                    <img src="./resources/images/course-computer-art.jpg" alt="Left hand holding mobile phone" />
+                    <h3>Computer Art</h3>
+                    <h4>COURSES</h4>
+                    <h4>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation </h4>
                 </div> 
                 <div class="course">
-                        <img src="./resources/images/course-design.jpg" alt="Person with check shirt adjusting camera focus" />
-                        <h3>Design</h3>
-                        <h4>COURSES</h4>
-                        <h4>User Experience Design, User Research, Visual Design</h4>
+                    <img src="./resources/images/course-design.jpg" alt="Person with check shirt adjusting camera focus" />
+                    <h3>Design</h3>
+                    <h4>COURSES</h4>
+                    <h4>User Experience Design, User Research, Visual Design</h4>
                 </div> 
                 <div class="course">
-                        <img src="./resources/images/course-data.jpg" alt="Laptop displaying charts" />
-                        <h3>Data</h3>
-                        <h4>COURSES</h4>
-                        <h4>Data Sceince, Big Data, SQL, Data Visualisation</h4>
+                    <img src="./resources/images/course-data.jpg" alt="Laptop displaying charts" />
+                    <h3>Data</h3>
+                    <h4>COURSES</h4>
+                    <h4>Data Sceince, Big Data, SQL, Data Visualisation</h4>
                 </div> 
                 <div class="course">
-                        <img src="./resources/images/course-business.jpg" alt="Metallic chess pieces" />
-                        <h3>Business</h3>
-                        <h4>COURSES</h4>
-                        <h4>Produce Development, Business Development, Startup</h4>
+                    <img src="./resources/images/course-business.jpg" alt="Metallic chess pieces" />
+                    <h3>Business</h3>
+                    <h4>COURSES</h4>
+                    <h4>Produce Development, Business Development, Startup</h4>
                 </div> 
                 <div class="course">
-                        <img src="./resources/images/course-marketing.jpg" alt="Person operating smart watch" />
-                        <h3>Marketting</h3>
-                        <h4>COURSES</h4>
-                        <h4>Analytics, Content Marketing, Mobile Marketing</h4>
+                    <img src="./resources/images/course-marketing.jpg" alt="Person operating smart watch" />
+                    <h3>Marketting</h3>
+                    <h4>COURSES</h4>
+                    <h4>Analytics, Content Marketing, Mobile Marketing</h4>
                 </div> 
             </div>  
         </div>
@@ -154,23 +154,23 @@
         <div class="site-container">
             <div class="urban-video">
                 <video src="./resources/videos/thesis.mp4" autoplay controls>
-                    Video showing an office blockand skyline over 24 hours, condensed into just under 90 seconds. 
+                    Video showing an office building and skyline over 24 hours, condensed into 22 seconds. 
                 </video>
                 <h3>Reimagine Urban</h3>
                 <h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."<h4>
             </div>
-            <div class="academy">
-                <div class="academy-img greybg">
+            <div class="info-section">
+                <div class="image bluebg">
                         <img src="./resources/images/thesis-fisma.jpg" alt="Someone working on a new product prototype" /> 
                 </div>  
-                <div class="academy-info greybg">
+                <div class="info bluebg whitetext">
                     <h3>Fisma: Design and Prototype</h3>
                     <h4>Designer showcase of new <BR> prototype product</h4>
                 </div> 
-                <div class="academy-img">
+                <div class="image">
                         <img src="./resources/images/thesis-now-and-then.jpg" alt="New York City skyline photo with office blocks" /> 
                 </div>  
-                <div class="academy-info">
+                <div class="info">
                     <h3>Now and then</h3>
                     <h4>Research study about New York</h4>
                 </div>  
@@ -196,13 +196,3 @@
 </body>
 
 </html>
-
-
-
-
-
-<!--Notes
-Start using alt academy-info for your images
-These product-name divs may not be even necessary. If you move the paragraph academy-info into the product into the product div, you get the same effect with less HTML being written overall. Maybe something to consider here for efficiency reasons.
-You are repeating these two styles a few times, maybe just create one class that applies both of these styles to be used repetitively. This might be a better approach. This reduces the amount of CSS you are writing overall.
--->
