Accessibility elements added.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
         <div class="site-container">
             <div class="logo">
-                <img src="./resources/images/ic-logo.svg" alt="Lion Icon" />  
+                <img src="./resources/images/ic-logo.svg" alt="" />  
                 <span class="bluetext">COLMAR</span>
                 <span class="redtext">ACADEMY</span>
             </div>
             <nav class="desktop">
-                <ul>
+                <ul role="presentation">
                     <li><a href="#">On Campus</a></li>
                     <li><a href="#">Online</a></li>
                     <li><a href="#">For Companies</a></li>
@@ -26,11 +26,11 @@
                 </ul>
             </nav>  
             <nav class="mobile">
-                <ul>
-                    <li><a href="#"><img src="./resources/images/ic-logo.svg" alt="Lion Icon" /></a></li>
-                    <li><a href="#"><img src="./resources/images/ic-on-campus.svg" alt="Campus Icon" /></a></li>
-                    <li><a href="#"><img src="./resources/images/ic-online.svg" alt="Online Icon" /></a></li>
-                    <li><a href="#"><img src="./resources/images/ic-login.svg" alt="Sign In Icon" /></a></li>
+                <ul role="presentation">
+                    <li><a href="#"><img src="./resources/images/ic-logo.svg" alt="" /></a></li>
+                    <li><a href="#"><img src="./resources/images/ic-on-campus.svg" alt="" /></a></li>
+                    <li><a href="#"><img src="./resources/images/ic-online.svg" alt="" /></a></li>
+                    <li><a href="#"><img src="./resources/images/ic-login.svg" alt="" /></a></li>
                 </ul>
             </nav>
         </div>
@@ -186,7 +186,7 @@
                 &copy;2016 Colmar Academy. All rights reserved
             </div>
             <div class="terms">
-                <ul>
+                <ul role="presentation">
                     <li><a href="#">Terms</a></li>
                     <li><a href="#">Privacy</a></li>
                 </ul>
